--- a/src/view/getting.ejs
+++ b/src/view/getting.ejs
@@ -9,8 +9,8 @@
 
 
     <main class="container getting">
-        <h1 class="f-averia getting__title">Encuentra los recursos que necesitas</h1>
-        <p class="getting__text">Increíbles recursos para desarrolladores y diseñadores; cientos de librerías de uso premium y gratuito. En esté sitio web encontraras herramientas, plugins, fuentes, iconos, biblioteca de imágenes, frameworks css, animaciones para sitios web, sitios webs de desafíos y mucho más.</p>
+        <h1 class="f-averia getting__title">Empecemos</h1>
+        <p class="getting__text">Encuentra recursos útiles para desarrolladores y diseñadores en un solo lugar. Este sitio web ofrece una variedad de librerías gratuitas y premium que incluyen herramientas, plugins, fuentes, iconos, biblioteca de imágenes, frameworks CSS, animaciones para sitios web, desafíos y mucho más. Descubre cómo enriquecer tus proyectos y llevarlos al siguiente nivel con nuestra selección de recursos.</p>
     </main>
 
 
