--- a/src/view/index.ejs
+++ b/src/view/index.ejs
@@ -39,7 +39,7 @@
 
         <section class="footer__contenedor">
             <img width="80" src="img/logo.png" alt="logotipo de revs">
-            <h2>Revs (Recursos para Desarrolladores y Diseñadores)</h2>
+            <h2>Revs</h2>
             <a href="/contacto" class="btn btn-border">Contactame</a>
             <a href="mailto:luisdaniel.dlr.380@gmail.com">Aministrador del sitio</a>
             <a href="/politicas">Términos y condiciones</a>
@@ -50,7 +50,6 @@
             <polyline points="7 11 12 6 17 11" />
             <polyline points="7 17 12 12 17 17" />
           </svg></a>
-
     </footer>
 
 
