--- a/src/view/partials/head.ejs
+++ b/src/view/partials/head.ejs
@@ -10,13 +10,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/> <!--Swiper-->
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/loader.css">
-    <!-- <link rel="stylesheet" href="/css/style.dark.css"> -->
 
-    
-
-    <!-- <link rel="stylesheet" href="sweetalert2.min.css">
-    <script src="sweetalert2.min.js"></script> -->
-    
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="./favicon/favicon.ico" type="image/x-icon">
+    <!-- sweetalert2 -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <title><%=title%></title>
 
