--- a/src/view/index.ejs
+++ b/src/view/index.ejs
@@ -22,7 +22,7 @@
         <article class="containerHome__contenido">
             <h1><span>Recursos <span>para</span></span> <span>Developers</span></h1>
             <a class="containerHome__btn btn" href="/getting-started">Empezar a descubrir</a>
-            <p class="containerHome__texto">Descubre un universo de recursos para hacer brillar tus proyectos web y diseño digital. Encuentra todo lo que necesitas en un solo lugar: bancos de imágenes, iconos, herramientas de diseño, fuentes, librerías, APIs y mucho más. ¡Enriquece tus proyectos y eleva tu creatividad al siguiente nivel!</p>
+            <p class="containerHome__texto">No pierdas tiempo buscando en Google librerías o recursos, aquí encontraras lo que necesitas de una manera más rápida.</p>
         </article>
     </section>
     <main>
