--- a/src/view/userAccount.ejs
+++ b/src/view/userAccount.ejs
@@ -34,7 +34,7 @@
                 <div class="profile__separador"></div>
                 <article class="profile__campo">
                     <p class="profile__userData">Guardados (<%=webs.length%>)</p>
-                    <!--<p class="profile__userData">Interacciones (0)</p>-->
+                    <p class="profile__userData">Interacciones (0)</p>
                 </article>
                 <div class="profile__separador"></div>
                 <article class="profile__campo">
