--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -1080,6 +1080,59 @@ body{
         width: 100%;
     }
 }
+.tips{
+    padding-bottom: 2rem;
+}
+.tips .title{
+    text-align: center;
+    margin-bottom: 2rem;
+}
+
+.tips__contenedor{
+    display: grid;
+    width: 90%;
+    margin: auto;
+    grid-template-columns: repeat(3,1fr);
+    gap: 1rem;
+}
+@media(max-width:960px){
+    .tips__contenedor{
+        width: 100%;
+        grid-template-columns: repeat(2,1fr);
+    }
+}
+@media(max-width:460px){
+    .tips__contenedor{
+        width: 100%;
+        grid-template-columns: repeat(1,1fr);
+    }
+}
+
+.tips__card{
+    padding: 1rem;
+    background-color: var(--colorDark);
+    border-radius: 1rem;
+    display: flex;
+    flex-direction: column;
+    -webkit-border-radius: 1rem;
+    -moz-border-radius: 1rem;
+    -ms-border-radius: 1rem;
+    -o-border-radius: 1rem;
+    text-align: center;
+    color: var(--colorLigth);
+    line-height: 1.8;
+}
+.tips__icon{
+    font-size: 4rem;
+    margin: auto;
+    color: var(--colorPrimary);
+    padding-bottom: 1rem;
+}
+.tips__title{
+    color: var(--colorWhite);
+    font-size: 1.4rem;
+    padding-bottom: 1rem;
+}
 
 /* ANCHOR CAOUSEL
 ##########################################################################################################
