--- a/src/view/partials/sidebar.ejs
+++ b/src/view/partials/sidebar.ejs
@@ -1,6 +1,6 @@
 
 <aside class="sidebar">
-    <h2 class="sidebar__title"><ion-icon name="funnel-outline"></ion-icon>Filtrar Categorías</h2>
+    <!--<h2 class="sidebar__title"><ion-icon name="funnel-outline"></ion-icon></h2>-->
     <ul class="sidebar__content">
         <% results.forEach( (e) => { %>
         <li class="sidebar__link">
