--- a/src/view/partials/sidebar.ejs
+++ b/src/view/partials/sidebar.ejs
@@ -4,7 +4,7 @@
     <ul class="sidebar__content">
         <% results.forEach( (e) => { %>
         <li style="display:flex; align-items:center;" class="sidebar__link">
-            <ion-icon name="<%=e.icon%>"></ion-icon>
+            <ion-icon style="color:#fff;" name="<%=e.icon%>"></ion-icon>
             <a style="display: block;" href="/categories/<%=e.nameCategory%>"><%=e.nameCategory%> (<b><%=e.cant%></b>)</a>
         </li>
         <% }); %>
