--- a/src/public/css/style.admin.css
+++ b/src/public/css/style.admin.css
@@ -79,6 +79,8 @@ nav{
     padding-right: 0 !important;
 }
 .card{
+    width: 96%;
+    margin: auto;
     height: 250px !important;
     position: relative;
     z-index: 1;
@@ -86,8 +88,10 @@ nav{
 .card:hover{
     background-color: var(--colorPrimary);
 }
-.card a{
+.card a, .card button{
+    border: none;
     display: flex;
+    background: none;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -95,7 +99,7 @@ nav{
     height: 100%;
     color: var(--colorPrimary);
 }
-.card a:hover{
+.card a:hover, .card button:hover{
     color: var(--colorWhite);
 }
 .icon-card{
